# labsOOP

MyCppProject/: README.md  main_lab1_16.cpp  report_lab1_16.md
MyCppProject/lab1/: CMakeLists.txt
MyCppProject/lab1/include/: lab1_16.h
MyCppProject/lab1/tests/: test_lab1_16.cpp
MyCppProject/lab2/: CMakeLists.txt  README.md  main_lab2_2.cpp
MyCppProject/lab2/include/: lab2_2.h
MyCppProject/lab2/src/: lab2_2.cpp
MyCppProject/lab2/tests/: test_lab2_2.cpp
MyCppProject/lab3/: CMakeLists.txt  main.cpp  protocol.txt
MyCppProject/lab3/include/: Array.h  Figure.h  Hexagon.h  Pentagon.h  Point.h  Rhombus.h
MyCppProject/lab3/src/: Array.cpp  Figure.cpp  Hexagon.cpp  Pentagon.cpp  Point.cpp  Rhombus.cpp
MyCppProject/lab3/tests/: test.cpp
MyCppProject/lab4/: CMakeLists.txt  README.md  main.cpp
MyCppProject/lab4/include/: Array.h  Figure.h  Hexagon.h  Pentagon.h  Point.h  Rhombus.h
MyCppProject/lab4/src/: Array.tpp  Figure.tpp  Hexagon.tpp  Pentagon.tpp  Point.tpp  Rhombus.tpp
MyCppProject/lab4/tests/: test.cpp
MyCppProject/lab5/: CMakeLists.txt  Readme.md  main.cpp
MyCppProject/lab5/include/: lab5.h
MyCppProject/lab5/src/: lab5.cpp
MyCppProject/lab6/: CMakeLists.txt  README.md  main.cpp  npc.txt
MyCppProject/lab6/include/: dragon.hpp  factory.hpp  knight.hpp  method.hpp  npc.hpp  princess.hpp  visitor.hpp
MyCppProject/lab6/src/: dragon.cpp  knight.cpp  method.cpp  npc.cpp  princess.cpp
MyCppProject/lab6/tests/: tests.cpp
MyCppProject/lab7/: CMakeLists.txt  main.cpp  tests.cpp
MyCppProject/lab7/include/: dragon.hpp  factory.hpp  manager.hpp  npc.hpp  observer.hpp  princess.hpp  visitor.hpp
MyCppProject/lab7/src/: dragon.cpp  knight.cpp  npc.cpp  princess.cpp
MyCppProject/src/: lab1_16.cpp
